# tachiyomi

./: build-and-add.sh  index.json  index.min.json  repo.json
.github/workflows/: update-index.yml
apk/: tachiyomi-all.mangadex-v1.4.202.apk  tachiyomi-all.mangadex-v1.4.203.apk
keiyoushi-clone/: .gitignore  Cargo.toml
keiyoushi-clone/src/: main.rs
