[package]
name = "keiyoushi-clone"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.12.20", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["fs", "macros", "rt-multi-thread"] }
